--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Carlos</string>
+    <string name="app_name">分身助手</string>
 
     <string name="server_process_name" >:va_core</string>
     <string name="start_app_failed">启动 %1$s 失败</string>
